@@ -1,3 +1,14 @@
+2008-05-01  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab-utils.c:
+	* src/baobab.c:
+	* src/baobab.h:
+	* src/baobab-prefs.c:
+	* src/baobab-scan.c:
+
+	Make the list of excluded dirs private to baobab.c in preparation
+	to turn it into a list of GFiles.
+
 2008-04-29  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/baobab-remote-connect-dialog.c:
